[gd_scene load_steps=2 format=3 uid="uid://8hwdr65wit7"]

[ext_resource type="Script" path="res://PlayerListEntry.gd" id="1_u7me6"]

[node name="PlayerListEntry" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_u7me6")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerID" type="Label" parent="HBox"]
layout_mode = 2
text = "id_number"

[node name="PlayerName" type="Label" parent="HBox"]
layout_mode = 2
text = "blank_name"

[node name="SendChallenge" type="Button" parent="HBox"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
text = "Challenge"

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[connection signal="pressed" from="HBox/SendChallenge" to="." method="_on_send_challenge_pressed"]
